[2.x-typing-theta-00] introduced Features & refined Type